fixed boxes and alignments

--- a/app/assets/stylesheets/components/_tables.scss
+++ b/app/assets/stylesheets/components/_tables.scss
@@ -10,7 +10,7 @@
 .table > tbody > tr > td,
 .table > tfoot > tr > th,
 .table > tfoot > tr > td {
-  padding: 8px;
+  padding: 2px;
   line-height: 1.4;
   vertical-align: middle;
   border-top: 1px solid #ddd;
