--- a/app/assets/stylesheets/pages/_orders.scss
+++ b/app/assets/stylesheets/pages/_orders.scss
@@ -32,6 +32,7 @@
   border-bottom: 4px solid #7fdbd4;
   padding-bottom: 5px;
   margin-bottom: 20px;
+  margin-top: 10vh;
 }
 
 .disclaimer {
